--- a/styles/index.css
+++ b/styles/index.css
@@ -77,7 +77,7 @@ nav li a {
 /* section */
 section {
   margin: 70px 0;
-  padding: 50px 130px;
+  padding: 0 70px;
 }
 /* section */
 /* sponsor section styles */
@@ -92,7 +92,7 @@ section {
   color: var(--font-color);
   font-size: 1.75rem;
   font-weight: 600;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 .collection-container {
   display: grid;
